--- a/Client/res/layout/useritem.xml
+++ b/Client/res/layout/useritem.xml
@@ -4,74 +4,116 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
-    android:orientation="horizontal" >
+    android:orientation="vertical" >
     
-    <ImageView
-        android:id="@+id/imageViewUser"
-        android:layout_width="68dp"
-        android:layout_height="match_parent"
-        android:layout_margin="0sp"
-        android:paddingLeft="0sp"
-        android:paddingRight="10sp"
-        android:scaleType="centerCrop"
-        android:src="@android:drawable/ic_menu_gallery" />
-	
-	<LinearLayout
-	    android:layout_width="0dp"
+    <LinearLayout
+        android:id="@+id/main_ll_itemUserList"
+	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_weight="0.74"
-	    android:orientation="vertical" >
-
-		<TextView
-		    android:id="@+id/nom"
-		    android:layout_width="245dp"
+	    android:orientation="horizontal" >
+    
+    
+    
+    	<ImageView
+	        android:id="@+id/imageViewUser"
+	        android:layout_width="68dp"
+	        android:layout_height="match_parent"
+	        android:layout_margin="0sp"
+	        android:paddingLeft="0sp"
+	        android:paddingRight="10sp"
+	        android:scaleType="centerCrop"
+	        android:src="@android:drawable/ic_menu_gallery" />
+		
+		<LinearLayout
+		    android:layout_width="0dp"
 		    android:layout_height="wrap_content"
-		    android:text="nom"
-		    android:textColor="@color/white"
-		    android:textSize="18sp" />
-	    
-	    <TextView
-	        android:id="@+id/age"
+		    android:layout_weight="0.74"
+		    android:orientation="vertical" >
+	
+			<TextView
+			    android:id="@+id/nom"
+			    android:layout_width="245dp"
+			    android:layout_height="wrap_content"
+			    android:textColor="@color/white"
+			    android:textSize="18sp" />
+			 <TextView
+		        android:id="@+id/prenom"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:textSize="14sp" />
+		    
+		    
+		    <TextView
+		        android:id="@+id/age"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:textColor="@color/globalBackground" />
+	
+		    <TextView
+		        android:id="@+id/remainingDate"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:textSize="14sp" />
+		    
+		    <TextView
+		        android:id="@+id/gouts"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:textSize="12sp" />
+		    
+		     <TextView
+		        android:id="@+id/_id"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:visibility="gone" />
+		     
+		     	    
+	
+		</LinearLayout>
+	
+	    <CheckBox
+	        android:id="@+id/checkBox"
 	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:textColor="@color/globalBackground" />
-
-	    <TextView
-	        android:id="@+id/_id"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
+	        android:layout_height="match_parent"
+	        android:text=""
+	        android:focusable="false"
+	        android:clickable="false"
 	        android:visibility="gone" />
-
-	    <TextView
-	        android:id="@+id/prenom"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:text="J-7"
-	        android:textSize="14sp" />
-
-	    <TextView
-	        android:id="@+id/TextView01"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:text="Goûts : "
-	        android:textSize="12sp" />
-
+	
+	    <ImageView
+	        android:id="@+id/arrow"
+	        android:layout_width="30sp"
+	        android:layout_height="match_parent"
+	        android:paddingRight="5sp"
+	        android:src="@drawable/red_arrown" />
+	
 	</LinearLayout>
-
-    <CheckBox
-        android:id="@+id/checkBox"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text=""
-        android:focusable="false"
-        android:clickable="false"
-        android:visibility="gone" />
-
-    <ImageView
-        android:id="@+id/arrow"
-        android:layout_width="20sp"
-        android:layout_height="match_parent"
-        android:paddingRight="5sp"
-        android:src="@drawable/red_arrown" />
-
+	 
+	 <LinearLayout
+	     android:id="@+id/firstUser"
+	     android:layout_width="match_parent"
+	     android:layout_height="wrap_content"
+	     android:orientation="horizontal"
+	     android:weightSum="2">
+	   
+	    <TextView
+                android:id="@+id/tvLikes"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@+strings/tagsFriend" /> 
+		<GridView
+            android:id="@+id/main_gridGifts"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:numColumns="1" >
+        </GridView>
+	     
+    </LinearLayout>
+    
+	 
+	 
 </LinearLayout>
+	    
