--- a/Client/res/layout/activity_friend_details.xml
+++ b/Client/res/layout/activity_friend_details.xml
@@ -4,51 +4,31 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/grey" >
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <ImageView
-                android:id="@+id/ivDetail"
-                android:layout_width="match_parent"
-                android:layout_height="155dp"
-                android:src="@android:drawable/sym_def_app_icon" />
+    
+   
+        <ImageView
+            android:id="@+id/ivDetail"
+            android:layout_width="155dp"
+            android:layout_height="155dp"
+            android:src="@android:drawable/sym_def_app_icon" />
 
             <TextView
-                android:id="@+id/tvName"
+                android:id="@+id/frienddetails_tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@+strings/nameFriend" />
-
-            <EditText
-                android:id="@+id/etDetailName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10" />
-
-
+                android:text="@string/frienddetail_tv_nameFriend" />
 
             <TextView
-                android:id="@+id/tvLikes"
+                android:id="@+id/frienddetails_tv_firstname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@+strings/tagsFriend" />
-
-            <EditText
-                android:id="@+id/etDetailTags"
-                android:layout_width="match_parent"
+                android:text="@string/frienddetail_tv_firstnameFriend" />
+            
+            <TextView
+                android:id="@+id/frienddetails_tv_RemainingDate"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10" />
-        </LinearLayout>
-
-        <GridView
-            android:id="@+id/gridGifts"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:numColumns="3" >
-        </GridView>
-
+                android:text="@string/frienddetail_tv_RemainingDate" />
+      
+       
 </LinearLayout>
