--- a/Client/res/layout/activity_connection.xml
+++ b/Client/res/layout/activity_connection.xml
@@ -30,5 +30,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/connection_b_connection"/>
+    <Button 
+        android:id="@+id/connection_b_subscription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/connection_b_subscription"/>
     
     </LinearLayout>
