--- a/Client/res/layout/activity_friend_details.xml
+++ b/Client/res/layout/activity_friend_details.xml
@@ -2,15 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/grey" >
-    
-   
+    android:background="@color/grey"
+    android:orientation="vertical" >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
         <ImageView
-            android:id="@+id/ivDetail"
+            android:id="@+id/frienddetails_iv_friendAvatar"
             android:layout_width="155dp"
             android:layout_height="155dp"
             android:src="@android:drawable/sym_def_app_icon" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/frienddetails_tv_name"
@@ -23,12 +32,69 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/frienddetail_tv_firstnameFriend" />
-            
+
+            <TextView
+                android:id="@+id/frienddetails_tv_age"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/globalBackground" />
+
             <TextView
                 android:id="@+id/frienddetails_tv_RemainingDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/frienddetail_tv_RemainingDate" />
-      
-       
+        </LinearLayout>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/frienddetails_tv_tags"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/frienddetails_tv_tags"
+        android:textSize="12sp" />
+
+    <AutoCompleteTextView
+        android:id="@+id/frienddetails_actv_edittags"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/frienddetails_actv_tags" />
+
+    <LinearLayout
+        android:id="@+id/frienddetails_l_tags"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="2" >
+
+        <LinearLayout
+            android:id="@+id/frienddetails_l_ltags"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/frienddetails_l_rtags"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+        </LinearLayout>
+    </LinearLayout>
+<LinearLayout
+        android:id="@+id/frienddetails_l_viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:orientation="vertical" >
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/frienddetails_vp_giftPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
+
 </LinearLayout>
