--- a/Client/res/menu/friendetails_menu.xml
+++ b/Client/res/menu/friendetails_menu.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
+    
     <item
-        android:id="@+id/action_delete_stop"
+        android:id="@+id/action_modify"
+        android:orderInCategory="100"
         android:showAsAction="always"
-        android:title="@string/menu_delete_ok">
-    </item>
+        android:title="@string/menu_modify"/>
 
-</menu> 
-
+</menu>
