--- a/Client/res/drawable/gradient_background.xml
+++ b/Client/res/drawable/gradient_background.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
-    <shape>
+    <shape
+        android:shape="rectangle">
         <gradient
-            android:angle="90"
-            android:startColor="#4D5E5F"
-            android:endColor="#4D5E5F"
+            android:gradientRadius="0"
+            android:startColor="#ecf0f1"
+            android:endColor="#ecf0f1"
             android:type="linear" />
     </shape>
 </item>
