--- a/Client/res/layout/activity_connection.xml
+++ b/Client/res/layout/activity_connection.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center_horizontal" >
+    android:gravity="center_horizontal"
+    android:background="@drawable/gradient_background" >
     
     <ImageView
         android:id="@+id/ivDetail"
