--- a/Client/res/layout/gift_pager_item.xml
+++ b/Client/res/layout/gift_pager_item.xml
@@ -12,7 +12,6 @@
            android:orientation="vertical">
        <TextView
            android:id="@+id/giftPager_tv_title"
-           style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
@@ -23,11 +22,12 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center_horizontal"
-            android:src="@android:drawable/sym_def_app_icon" />
+            android:src="@drawable/cadeau"
+            android:scaleType="fitCenter"
+            android:contentDescription="@string/gift_pager_iv_gift_description" />
        
        <TextView
            android:id="@+id/giftPager_tv_description"
-           style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/giftPager_tv_description" />
