--- a/Client/res/layout/useritem.xml
+++ b/Client/res/layout/useritem.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:id="@+id/main_ll_itemUserList"
 	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
+	    android:layout_height="0dp"
 	    android:layout_weight="0.74"
 	    android:orientation="horizontal" >
     
@@ -23,44 +23,42 @@
 	        android:paddingLeft="0sp"
 	        android:paddingRight="10sp"
 	        android:scaleType="centerCrop"
-	        android:src="@android:drawable/ic_menu_gallery" />
+	        android:src="@drawable/noavatar"
+	        android:contentDescription="@string/useritem_iv_user_description" />
 		
 		<LinearLayout
 		    android:layout_width="0dp"
 		    android:layout_height="wrap_content"
+		    android:paddingLeft="30sp"
 		    android:layout_weight="0.74"
 		    android:orientation="vertical" >
 	
 			<TextView
 			    android:id="@+id/nom"
-			    android:layout_width="245dp"
-			    android:layout_height="wrap_content"
-			    android:textColor="@color/white"
-			    android:textSize="18sp" />
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"/>
 			 <TextView
 		        android:id="@+id/prenom"
 		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:textSize="14sp" />
+		        android:layout_height="wrap_content" />
 		    
 		    
 		    <TextView
 		        android:id="@+id/age"
 		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:textColor="@color/globalBackground" />
+		        android:layout_height="wrap_content"/>
 	
 		    <TextView
 		        android:id="@+id/remainingDate"
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
-		        android:textSize="14sp" />
+		        android:textSize="15sp"
+		        android:textColor="@color/red" />
 		    
 		    <TextView
 		        android:id="@+id/gouts"
 		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:textSize="12sp" />
+		        android:layout_height="wrap_content" />
 		    
 		     <TextView
 		        android:id="@+id/_id"
@@ -90,34 +88,33 @@
 	
 	</LinearLayout>
 	 
-	 <LinearLayout
+	 <RelativeLayout
 	     android:id="@+id/firstUser"
 	     android:layout_width="match_parent"
 	     android:layout_height="wrap_content"
-	     android:orientation="horizontal"
 	     android:weightSum="2">
 	   
 	    <TextView
                 android:id="@+id/tvLikes"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:text="@+strings/tagsFriend" /> 
 		<ImageView
             android:id="@+id/imageViewGift"
-	        android:layout_width="0dp"
-            android:layout_weight="1"
+	        android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:numColumns="1" 
+            android:layout_toRightOf="@id/tvLikes"
             android:layout_margin="0sp"
-	        android:paddingLeft="0sp"
+	        android:paddingLeft="10sp"
 	        android:paddingRight="10sp"
-	        android:scaleType="centerCrop"
-	        android:src="@android:drawable/ic_menu_gallery"
+	        android:scaleType="fitStart"
+	        android:src="@drawable/cadeau"
+	        android:contentDescription="@string/useritem_iv_gift_description"
             >
         </ImageView>
 	     
-    </LinearLayout>
+    </RelativeLayout>
     
 	 
 	 
