--- a/Client/res/values/colors.xml
+++ b/Client/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
- 	<color name="globalBackground">#c5d200</color>
- 	<color name="grey">#4D5E5F</color>
- 	<color name="red">#F84934</color>
- 	<color name="white">#FFFFFF</color>   
+ 	<color name="globalBackground">#ecf0f1</color>
+ 	<color name="grey">#7f8c8d</color>
+ 	<color name="red">#e74c3c</color>
+ 	<color name="white">#ecf0f1</color>
+ 	<color name="blue">#2980b9</color>
+ 	<color name="darkBlue">#2c3e50</color>
 </resources>
