--- a/Client/res/layout/activity_friend_details_modification.xml
+++ b/Client/res/layout/activity_friend_details_modification.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="@drawable/gradient_background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,7 +14,7 @@
             android:id="@+id/modify_iv_avatar"
             android:layout_width="match_parent"
             android:layout_height="155dp"
-            android:src="@android:drawable/sym_def_app_icon" />
+            android:src="@drawable/noavatar" />
 
         <TextView
             android:id="@+id/modify_tv_firstname"
