Reunification de l'ajout et de la modifcation d'ami dans la meme activity . Passage de l'ajout des gouts dans cette activity. Et mise a jour du dictionnaire de tags ! Strings a afficher mises en francais!  Si vous trouvez des choses qui ne marche pas dites le moi.

--- a/Client/res/layout/activity_friend_details_modification.xml
+++ b/Client/res/layout/activity_friend_details_modification.xml
@@ -79,12 +79,24 @@
         android:layout_height="wrap_content"
         android:text="@string/frienddetails_tv_tags"
         android:textSize="12sp" />
-
-    <AutoCompleteTextView
-        android:id="@+id/modify_actv_edittags"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/modify_actv_tags" />
+        android:orientation="horizontal">
+
+        <AutoCompleteTextView
+            android:id="@+id/modify_actv_edittags"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/modify_actv_tags"
+            android:textColor="@color/blue" />
+
+        <Button 
+            android:id="@+id/modify_b_addtag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/modify_b_addtag"/>
+        </LinearLayout>
 
     <LinearLayout
         android:id="@+id/modify_l_tags"
