Ajout de la modification d'un ami avec le serveur. Attention la date d'anniversaire n'étant pas garder en attribut de friend l'année est pour l'instant modifié en dure...Il reste à ajouter la date en attribut et sérializer la classe friend afin de faciliter les échanges entre les activités

--- a/Client/res/layout/activity_friend_details.xml
+++ b/Client/res/layout/activity_friend_details.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/gradient_background"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
-    android:orientation="vertical"
     android:focusable="true"
-    android:focusableInTouchMode="true" >
+    android:focusableInTouchMode="true"
+    android:orientation="vertical"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,8 +18,8 @@
             android:id="@+id/frienddetails_iv_friendAvatar"
             android:layout_width="155dp"
             android:layout_height="155dp"
-            android:src="@drawable/noavatar"
-            android:contentDescription="@string/activity_friend_details_iv_friend_avatar" />
+            android:contentDescription="@string/activity_friend_details_iv_friend_avatar"
+            android:src="@drawable/noavatar" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -66,6 +66,7 @@
         android:id="@+id/frienddetails_l_tags"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:baselineAligned="false"
         android:orientation="horizontal"
         android:weightSum="2" >
 
@@ -85,7 +86,8 @@
             android:orientation="vertical" >
         </LinearLayout>
     </LinearLayout>
-<LinearLayout
+
+    <LinearLayout
         android:id="@+id/frienddetails_l_viewPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
