--- a/Client/res/layout/activity_friend_details_modification.xml
+++ b/Client/res/layout/activity_friend_details_modification.xml
@@ -1,126 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" 
-    android:background="@drawable/gradient_background">
-
-    <LinearLayout
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+   <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@drawable/gradient_background"
         android:orientation="vertical" >
 
-        <ImageView
-            android:id="@+id/modify_iv_avatar"
-            android:layout_width="match_parent"
-            android:layout_height="155dp"
-            android:src="@drawable/noavatar" />
-
-        <TextView
-            android:id="@+id/modify_tv_firstname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/modify_tv_firstname" />
-
-        <EditText
-            android:id="@+id/modify_et_firstname"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/modify_h_firstname"
-            android:ems="10" />
+            android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/modify_tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/modify_tv_name" />
+            <ImageView
+                android:id="@+id/modify_iv_avatar"
+                android:layout_width="match_parent"
+                android:layout_height="155dp"
+                android:src="@drawable/noavatar" />
 
-        <EditText
-            android:id="@+id/modify_et_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/modify_h_name"
-            android:ems="10" />
+            <TextView
+                android:id="@+id/modify_tv_firstname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/modify_tv_firstname" />
 
-        <TextView
-            android:id="@+id/modify_tv_birthdaydate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/modify_tv_birthdaydate" />
+            <EditText
+                android:id="@+id/modify_et_firstname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/modify_h_firstname" />
 
-        <EditText
-            android:id="@+id/modify_et_birthdaydate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="date"
-            android:hint="@string/modify_h_birthdaydate"
-            android:ems="10" />
-        
-        
-        <TextView
-            android:id="@+id/modify_tv_function"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/modify_tv_function" />
+            <TextView
+                android:id="@+id/modify_tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/modify_tv_name" />
 
-        <EditText
-            android:id="@+id/modify_et_function"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/modify_h_function"
-            android:ems="10" />
+            <EditText
+                android:id="@+id/modify_et_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/modify_h_name" />
 
-      
-    </LinearLayout>
+            <TextView
+                android:id="@+id/modify_tv_birthdaydate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/modify_tv_birthdaydate" />
 
-    <TextView
-        android:id="@+id/modify_tv_tags"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/frienddetails_tv_tags"
-        android:textSize="12sp" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+            <EditText
+                android:id="@+id/modify_et_birthdaydate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/modify_h_birthdaydate"
+                android:inputType="date" />
 
-        <AutoCompleteTextView
-            android:id="@+id/modify_actv_edittags"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/modify_actv_tags"
-            android:textColor="@color/blue" />
+            <TextView
+                android:id="@+id/modify_tv_function"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/modify_tv_function" />
 
-        <Button 
-            android:id="@+id/modify_b_addtag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/modify_b_addtag"/>
+            <EditText
+                android:id="@+id/modify_et_function"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/modify_h_function" />
         </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/modify_l_tags"
-        android:baselineAligned="false"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="2" >
+        <TextView
+            android:id="@+id/modify_tv_tags"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/frienddetails_tv_tags"
+            android:textSize="12sp" />
 
         <LinearLayout
-            android:id="@+id/modify_l_ltags"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical" >
+            android:orientation="horizontal" >
+
+            <AutoCompleteTextView
+                android:id="@+id/modify_actv_edittags"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/modify_actv_tags"
+                android:textColor="@color/blue" />
+
+            <Button
+                android:id="@+id/modify_b_addtag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/modify_b_addtag" />
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/modify_l_rtags"
+            android:id="@+id/modify_l_tags"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical" >
+            android:baselineAligned="false"
+            android:orientation="horizontal"
+            android:weightSum="2" >
+
+            <LinearLayout
+                android:id="@+id/modify_l_ltags"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical" >
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/modify_l_rtags"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical" >
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
