--- a/Client/res/layout/activity_friend_details_modification.xml
+++ b/Client/res/layout/activity_friend_details_modification.xml
@@ -19,6 +19,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="155dp"
                 android:src="@drawable/noavatar" />
+            <Button 
+                android:id="@+id/modify_b_avatar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/modify_b_avatar"/>
 
             <TextView
                 android:id="@+id/modify_tv_firstname"
@@ -60,18 +66,7 @@
                 android:hint="@string/modify_h_birthdaydate"
                 android:inputType="date" />
 
-            <TextView
-                android:id="@+id/modify_tv_function"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/modify_tv_function" />
-
-            <EditText
-                android:id="@+id/modify_et_function"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="@string/modify_h_function" />
+            
         </LinearLayout>
 
         <TextView
