--- a/Client/res/drawable/button_background.xml
+++ b/Client/res/drawable/button_background.xml
@@ -7,7 +7,7 @@
         <stroke android:width="1px" android:color="#bb000000"/>
         <gradient
             android:angle="0"
-            android:startColor="@color/grey"
+            android:startColor="@color/darkBlue"
             android:endColor="@color/darkBlue"
             android:type="linear" />
         <padding 
@@ -16,7 +16,7 @@
             android:top="7dp"
             android:bottom="7dp"/>
         <corners 
-            android:radius="5dp"/>
+            android:radius="3dp"/>
     </shape>
 </item>
 </selector>
