Ajout de la sélection d'avatar de l'application(petit problème de mémoire des foisqui a confirmer). Ajout de flèches d'indications sur le gift pager.Et p-e autre chose mais je sais plus quoi...

--- a/Client/res/values/dimens.xml
+++ b/Client/res/values/dimens.xml
@@ -4,5 +4,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 	<dimen name="text_size">16dp</dimen>
+    <dimen name="margin_image">16dp</dimen>
+    <dimen name="margin_image_list">4dp</dimen>
     
 </resources>
