--- a/Client/res/layout/activity_friend_details.xml
+++ b/Client/res/layout/activity_friend_details.xml
@@ -18,6 +18,7 @@
             android:id="@+id/frienddetails_iv_friendAvatar"
             android:layout_width="155dp"
             android:layout_height="155dp"
+            android:layout_margin="@dimen/margin_image"
             android:contentDescription="@string/activity_friend_details_iv_friend_avatar"
             android:src="@drawable/noavatar" />
 
@@ -61,7 +62,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/frienddetails_tv_tags" />
-     <TextView
+
+    <TextView
         android:id="@+id/frienddetails_all_tags"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
