--- a/Client/res/layout/activity_friend_details_modification.xml
+++ b/Client/res/layout/activity_friend_details_modification.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true" >
-   <LinearLayout
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/gradient_background"
@@ -18,13 +19,15 @@
                 android:id="@+id/modify_iv_avatar"
                 android:layout_width="match_parent"
                 android:layout_height="155dp"
+                android:layout_margin="@dimen/margin_image"
                 android:src="@drawable/noavatar" />
-            <Button 
+
+            <Button
                 android:id="@+id/modify_b_avatar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="@string/modify_b_avatar"/>
+                android:text="@string/modify_b_avatar" />
 
             <TextView
                 android:id="@+id/modify_tv_firstname"
@@ -65,8 +68,6 @@
                 android:ems="10"
                 android:hint="@string/modify_h_birthdaydate"
                 android:inputType="date" />
-
-            
         </LinearLayout>
 
         <TextView
