--- a/Client/res/layout/useritem.xml
+++ b/Client/res/layout/useritem.xml
@@ -5,136 +5,130 @@
     android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
     android:orientation="vertical" >
-    
+
     <LinearLayout
         android:id="@+id/main_ll_itemUserList"
-	    android:layout_width="match_parent"
-	    android:layout_height="0dp"
-	    android:layout_weight="0.74"
-	    android:orientation="horizontal" >
-    
-    
-    
-    	<ImageView
-	        android:id="@+id/imageViewUser"
-	        android:layout_width="68dp"
-	        android:layout_height="match_parent"
-	        android:layout_margin="0sp"
-	        android:paddingLeft="0sp"
-	        android:paddingRight="10sp"
-	        android:scaleType="centerCrop"
-	        android:src="@drawable/noavatar"
-	        android:contentDescription="@string/useritem_iv_user_description" />
-		
-		<LinearLayout
-		    android:layout_width="0dp"
-		    android:layout_height="wrap_content"
-		    android:paddingLeft="30sp"
-		    android:layout_weight="0.74"
-		    android:orientation="vertical" >
-	
-			<TextView
-			    android:id="@+id/nom"
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"/>
-			 <TextView
-		        android:id="@+id/prenom"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content" />
-		    
-		    
-		    <TextView
-		        android:id="@+id/age"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"/>
-	
-		    <TextView
-		        android:id="@+id/remainingDate"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:textSize="15sp"
-		        android:textColor="@color/red" />
-		    
-		    <TextView
-		        android:id="@+id/gouts"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content" />
-		    
-		     <TextView
-		        android:id="@+id/_id"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:visibility="gone" />
-		     
-		     	    
-	
-		</LinearLayout>
-	
-	    <CheckBox
-	        android:id="@+id/checkBox"
-	        android:layout_width="wrap_content"
-	        android:layout_height="match_parent"
-	        android:text=""
-	        android:focusable="false"
-	        android:clickable="false"
-	        android:visibility="gone" />
-	
-	    <ImageView
-	        android:id="@+id/arrow"
-	        android:layout_width="30sp"
-	        android:layout_height="match_parent"
-	        android:paddingRight="5sp"
-	        android:src="@drawable/red_arrown" />
-	
-	</LinearLayout>
-	 
-	 <RelativeLayout
-	     android:id="@+id/firstUser"
-	     android:layout_width="match_parent"
-	     android:layout_height="wrap_content"
-	     android:weightSum="2">
-	   
-	    <TextView
-                android:id="@+id/tvLikes"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.74"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/imageViewUser"
+            android:layout_width="68dp"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/margin_image_list"
+            android:contentDescription="@string/useritem_iv_user_description"
+            android:paddingLeft="0sp"
+            android:paddingRight="10sp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/noavatar" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.74"
+            android:orientation="vertical"
+            android:paddingLeft="30sp" >
+
+            <TextView
+                android:id="@+id/nom"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@+strings/tagsFriend" /> 
-		  <LinearLayout
-	           android:id="@+id/giftPager_l_giftpager" 
-	           android:layout_width="match_parent"
-	           android:layout_height="wrap_content"
-	           android:layout_toRightOf="@id/tvLikes"
-	           android:layout_toEndOf="@id/tvLikes"
-	           android:orientation="vertical">
-		      <TextView
-	           android:id="@+id/useritem_tv_title"
-	           android:layout_width="match_parent"
-	           android:layout_height="wrap_content"
-	           android:layout_gravity="center_horizontal"
-	           android:textColor="@color/red" />
-			<ImageView
-	            android:id="@+id/imageViewGift"
-		        android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:numColumns="1" 
-	             android:layout_margin="0sp"
-		        android:paddingLeft="10sp"
-		        android:paddingRight="10sp"
-		        android:scaleType="fitStart"
-		        android:src="@drawable/cadeau"
-		        android:contentDescription="@string/useritem_iv_gift_description"
-	            >
-	        </ImageView>
-	        <TextView
-	           android:id="@+id/useritem_tv_price"
-	           android:layout_width="match_parent"
-	           android:layout_height="wrap_content"
-	           android:layout_gravity="center_horizontal"
-	           android:textColor="@color/red" />
-	     </LinearLayout>
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/prenom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/age"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/remainingDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/red"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/gouts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
+        </LinearLayout>
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:clickable="false"
+            android:focusable="false"
+            android:text=""
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/arrow"
+            android:layout_width="30sp"
+            android:layout_height="match_parent"
+            android:paddingRight="5sp"
+            android:src="@drawable/red_arrown" />
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/firstUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="2" >
+
+        <TextView
+            android:id="@+id/tvLikes"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@+strings/tagsFriend" />
+
+        <LinearLayout
+            android:id="@+id/giftPager_l_giftpager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/tvLikes"
+            android:layout_toRightOf="@id/tvLikes"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/useritem_tv_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/red" />
+
+            <ImageView
+                android:id="@+id/imageViewGift"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="0sp"
+                android:contentDescription="@string/useritem_iv_gift_description"
+                android:numColumns="1"
+                android:paddingLeft="10sp"
+                android:paddingRight="10sp"
+                android:scaleType="fitStart"
+                android:src="@drawable/cadeau" >
+            </ImageView>
+
+            <TextView
+                android:id="@+id/useritem_tv_price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/red" />
+        </LinearLayout>
     </RelativeLayout>
-    
-	 
-	 
+
 </LinearLayout>
-	    
