léo il est trop fort : notif configuré=ok, notif pour plusieur anniversaire=ok, datePicker=ok, un peu de nétoyage de code=ok

--- a/Client/res/layout/activity_friend_details_modification.xml
+++ b/Client/res/layout/activity_friend_details_modification.xml
@@ -61,13 +61,14 @@
                 android:layout_height="wrap_content"
                 android:text="@string/modify_tv_birthdaydate" />
 
-            <EditText
-                android:id="@+id/modify_et_birthdaydate"
+            <DatePicker
+                android:id="@+id/modify_dp_birthdaydate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="@string/modify_h_birthdaydate"
-                android:inputType="date" />
+                android:startYear="1900"
+                android:spinnersShown="true"
+                android:calendarViewShown="false"/>
         </LinearLayout>
 
         <TextView
