--- a/Client/res/layout/activity_choose_avatar.xml
+++ b/Client/res/layout/activity_choose_avatar.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:gravity="center_horizontal"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="@drawable/gradient_background">
 
     <LinearLayout
         android:layout_width="match_parent"
